modified contacts component to include inputs for name, email, subject, and comments; haven't yet built out the structure/logic for saving responses yet

--- a/src/app/components/contacts/contacts.component.html
+++ b/src/app/components/contacts/contacts.component.html
@@ -1,1 +1,27 @@
-<p>contacts works!</p>
+<div class="contacts-container">
+  <form class="form-container">
+    <div class="name-container">
+      <mat-form-field class="example-full-width">
+        <input class="contact-input" matInput color="white" placeholder="First Name" value="">
+      </mat-form-field>
+      
+      <mat-form-field class="example-full-width">
+        <input class="contact-input" matInput color="white" placeholder="Last Name" value="">
+      </mat-form-field>
+    </div>
+
+      <mat-form-field class="example-full-width">
+        <input class="contact-input" matInput color="white" placeholder="Email" value="">
+      </mat-form-field>
+
+      <mat-form-field class="example-full-width">
+        <input class="contact-input" matInput color="white" placeholder="Subject" value="">
+      </mat-form-field>
+    
+      <mat-form-field class="example-full-width">
+        <textarea class="contact-input" matInput color="white" placeholder="Leave a comment"></textarea>
+      </mat-form-field>
+
+    </form>
+    <button mat-raised-button color="primary">Submit</button>
+</div>
