modified credits component to include logic for parameterizing an array of album pictures into a list of cards; added styling

--- a/src/app/components/credits/credits.component.html
+++ b/src/app/components/credits/credits.component.html
@@ -1,1 +1,3 @@
-<p>credits works!</p>
+<div class="credits-container">
+  <app-credit-item *ngFor="let item of pictures" [picture]="item"></app-credit-item>
+</div>
