moved one of the picture assets into the a gitignored directory so it doesn't get pushed up

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -2,7 +2,7 @@
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css'
 
 html
-  background: url('./assets/Ua1a6Blk.jpeg') no-repeat center center fixed
+  background: url('./assets/pictures/Ua1a6Blk.jpeg') no-repeat center center fixed
   -webkit-background-size: cover
   -moz-background-size: cover
   -o-background-size: cover
