--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,9 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css'
 
+@mixin backgroundProperties()
+  width: 100%
+  height: 100%
+  margin: auto
+  padding: auto
+  overflow-x: hidden
+
 html
   background: url('./assets/bgpics/background_img.jpeg') no-repeat center center fixed
   -webkit-background-size: cover
   -moz-background-size: cover
   -o-background-size: cover
   background-size: cover
+  @include backgroundProperties()
+
+body
+  @include backgroundProperties()
